--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,10 +28,18 @@ android {
 }
 
 dependencies {
+    implementation 'com.firebase:geofire-android:3.2.0'
+    implementation 'com.firebase:geofire-android-common:3.2.0'
 
+    implementation 'com.google.firebase:firebase-bom:30.0.2'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.firebase:firebase-auth:21.0.4'
+    implementation 'com.google.firebase:firebase-database:20.0.5'
+    implementation 'com.firebase:geofire:2.3.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
