--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.taxiapp">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +16,22 @@
         android:theme="@style/Theme.TaxiApp"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".PassengerSignInActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PassengerMapsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DriverSignInActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DriverMapsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChooseModeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
